fix: collapse样式优化

--- a/src/collapse/index.less
+++ b/src/collapse/index.less
@@ -1,17 +1,16 @@
 @import '../style/font.less';
+@import './var.less';
 
 .c-collapse {
   &--normal {
-    background: #fff;
+    background: @collapse-normal-background;
     & > .c-collapse-item {
-      margin-bottom: 2px;
       & > .c-collapse-item__title {
         height: 44px;
-        background: #fafafa;
+        background: @collapse-normal-title-background;
         font-size: 14px;
         font-weight: bold;
-        color: #333;
-        line-height: 21px;
+        color: @black-1;
         padding: 0 16px;
         align-items: center;
         .c-muli-bold;
@@ -43,19 +42,18 @@
         align-items: center;
         color: #333;
         line-height: 23px;
-        margin-bottom: 2px;
         padding: 0 16px;
         .muli-light();
         .c-cell__title {
           margin: 0 8px;
         }
-        &--zebra {
-          & + .c-collapse-item__wrapper {
-            & > .c-collapse-item__content {
-              padding: 0;
-            }
-          }
-        }
+      }
+    }
+  }
+  &-item {
+    &__content {
+      & > .c-collapse {
+        margin: -12px -16px;
       }
     }
   }
